Margin fix on mobile design

--- a/src/style.scss
+++ b/src/style.scss
@@ -124,7 +124,7 @@
 .header-image {
   grid-row: 2 / 6;
   grid-column: 1 / 7;
-
+  margin-bottom: 2rem;
   img {
     width: 100%;
   }
@@ -153,7 +153,11 @@
   background-color: #FFF;
   display: flex;
   align-items: center;
-  margin-right: 1rem;
+  margin: 5rem 3rem 5rem 0.9rem;
+
+  @media screen and (min-width: 800px) {  
+    margin: 0 1rem 0 0;
+  }
 
   div:nth-child(1) {
     display: none;
@@ -273,6 +277,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 5rem;
+  margin-top: 2rem;
 
   @include button-group;
 
